feat: add cafe id in CafeOutput
